--- a/mainMenu/mainMenu.phtml
+++ b/mainMenu/mainMenu.phtml
@@ -593,13 +593,13 @@
             </select>
         </p>
         <p>
-        	<label for="updateDate">イベント開催日</label>
-        	<input type="text" name="updateDate" class="datepicker" value="">
+        	<label for="updateDate2">イベント開催日</label>
+        	<input type="text" name="updateDate2" class="datepicker" value="">
         </p>
 
 
     </fieldset>
-    	<input type="hidden" name="eventplanid" id=eventplanid>
+    	<input type="hidden" name="eventplanid" id="eventplanid">
     	 <input type="hidden" name="year4" id="year4">
         <input type="hidden" name="month4" id="month4">
         <input type="hidden" name="day4" id="day4">
